prod_snapshot_2015-09-24_1030/objects/Opp_Tracking_Report__c.object
<CustomObject>
    <description>This will keep track of events on the Opportunity Approval and Agreement Processes, to provided for a consolidated reporting object.</description>
    <fields>
        <fullName>Action_Owner_Id__c</fullName>
        <formula>Action_Owner__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Owner_Role__c</fullName>
        <label>Action Owner Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tracking_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tracking Records</relationshipLabel>
        <relationshipName>Tracking_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Period__c</fullName>
        <formula>GL_Calender__r.Code_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Sharer_Id__c</fullName>
        <formula>Opportunity__r.DC_Share__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Sharer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved &amp; Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pitched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL Assist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GL_Calender_Id__c</fullName>
        <formula>GL_Calender__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GO Calender Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Calender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GO Calender</label>
        <referenceTo>KPICalender__c</referenceTo>
        <relationshipLabel>Tracking Records</relationshipLabel>
        <relationshipName>Tracking_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPI_Rep_Id__c</fullName>
        <formula>KPI_Rep__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Rep Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Rep</label>
        <referenceTo>KPIRep__c</referenceTo>
        <relationshipLabel>Tracking Records</relationshipLabel>
        <relationshipName>Tracking_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Move_Approve_Date__c</fullName>
        <label>Move Approve Date</label>
        <picklist>
            <picklistValues>
                <fullName>-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Created__c</fullName>
        <formula>Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opp_Id__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner__c</fullName>
        <formula>Opportunity__r.Sales_Rep_II__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tracking Records</relationshipLabel>
        <relationshipName>Tracking_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>GL_Calender__r.YearPeriod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Stamp_Code__c</fullName>
        <formula>DATEVALUE(Now()) - DATEVALUE(Time_Stamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Stamp Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>IF(ISNULL( Opportunity__r.DC_Sharer__c ),1,(1/2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Code__c</fullName>
        <formula>IF(TODAY()=DATEVALUE(Time_Stamp__c), 
(-1*(((TODAY() - DATEVALUE(Time_Stamp__c))-(7-(MOD(TODAY()-DATE(2000,1,2),7))))/7))
, 

-1*(((TODAY() - DATEVALUE(Time_Stamp__c))-(7-(MOD(TODAY()-DATE(2000,1,2),7))))/7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Of__c</fullName>
        <formula>DATEVALUE(  Time_Stamp__c ) + CASE(MOD(DATEVALUE( Time_Stamp__c ) - DATE(1900, 1, 7), 7), 
0, 1, 
1, 0, 
2, -1, 
3, -2, 
4, -3, 
5, -4, 
6, -5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Of</label>
        <type>Date</type>
    </fields>
    <label>Tracking Record</label>
    <nameField>
        <label>Opp Tracking Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracking Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>